--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,11 +12,11 @@
 html {
   height: 100vh;
   font-size: 62.5%;
+  background: url(../img/timer.jpg) center center; 
 }
 
 body {
   height: 100%;
-  background-color: var(--primary-color);
 }
 
 h1 {
