--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,3 @@
-:root {
-  --primary-color: rgb(17, 86, 102) 
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -12,11 +8,18 @@
 html {
   height: 100vh;
   font-size: 62.5%;
-  background: url(../img/timer.jpg) center center; 
+  background: url(../img/timer.jpg) no-repeat center center; 
+  background-size: cover;
 }
 
 body {
   height: 100%;
+  display: flex;
+}
+
+.main {
+  display: flex;
+  margin: auto;
 }
 
 h1 {
@@ -38,12 +41,11 @@ p {
 }
 
 .container {
-  height: 50%;
-  max-width: 640px;
-  margin: 50px auto;
+  width: 30rem;
+  height: 30rem;
   background-color: #ffffffff;
-  padding: 20px;
   border-radius: 50%;
+  margin: auto;
 }
 
 .result {
